# LoginScreen

./: CMakeLists.txt  Readme.md
LoginScreenCEF/: CMakeLists.txt  Login.h  app.cpp  app.h  avatarloader.cpp  avatarloader.h  browserprocesshandler.cpp  browserprocesshandler.h  cefheaders.h  client.cpp  client.h  conf.cpp  conf.h  contentloader.cpp  contentloader.h  contextmenuhandler.cpp  contextmenuhandler.h  cookieaccessfilter.cpp  cookieaccessfilter.h  displayhandler.cpp  displayhandler.h  helpers.h  lifespanhandler.cpp  lifespanhandler.h  linkerdirections.cpp  loadhandler.cpp  loadhandler.h  main.cpp  mimeguess.cpp  mimeguess.h  requesthandler.cpp  requesthandler.h  resourcehandler.cpp  resourcehandler.h  resourcerequesthandler.cpp  resourcerequesthandler.h  stringstream.h  usernames.cpp  usernames.h
LoginScreenConfig/: CMakeLists.txt  config.cpp  config.h  main.cpp  mainwindow.cpp  mainwindow.h  priv.cpp  priv.h
LoginScreenConfig/vcpkg-export/installed/vcpkg/info/: brotli_1.0.9_x86-windows.list  bzip2_1.0.8_x86-windows.list  double-conversion_3.1.5_x64-windows.list  double-conversion_3.1.5_x86-windows.list  egl-registry_2020-02-20_x64-windows.list  egl-registry_2020-02-20_x86-windows.list  freetype_2.10.2_x64-windows.list  freetype_2.10.2_x86-windows.list  harfbuzz_2.7.2_x64-windows.list  harfbuzz_2.7.2_x86-windows.list  icu_67.1_x86-windows.list  libjpeg-turbo_2.0.5_x64-windows.list  libjpeg-turbo_2.0.5_x86-windows.list  libpng_1.6.37_x64-windows.list  libpng_1.6.37_x86-windows.list  libpq_12.2_x64-windows.list  libpq_12.2_x86-windows.list  openssl-windows_1.1.1h_x64-windows.list  openssl_1.1.1g_x64-windows.list  pcre2_10.35_x64-windows.list  pcre2_10.35_x86-windows.list  qt5-base_5.15.1_x64-windows.list  qt5-base_5.15.1_x86-windows.list  ragel_6.10-3_x64-windows.list  ragel_6.10-3_x86-windows.list  sqlite3_3.33.0_x64-windows.list  sqlite3_3.33.0_x86-windows.list  zlib_1.2.11_x86-windows.list  zstd_1.4.4_x64-windows.list  zstd_1.4.4_x86-windows.list
LoginScreenConfig/vcpkg-export/installed/x64-windows/debug/lib/: Qt5AccessibilitySupportd.lib  Qt5AccessibilitySupportd.prl  Qt5Concurrentd.lib  Qt5Concurrentd.prl  Qt5Cored.lib  Qt5Cored.prl  Qt5DBusd.lib  Qt5DBusd.prl  Qt5DeviceDiscoverySupportd.lib  Qt5DeviceDiscoverySupportd.prl  Qt5EdidSupportd.lib  Qt5EdidSupportd.prl  Qt5EventDispatcherSupportd.lib  Qt5EventDispatcherSupportd.prl  Qt5FbSupportd.lib  Qt5FbSupportd.prl  Qt5FontDatabaseSupportd.lib  Qt5FontDatabaseSupportd.prl  Qt5Guid.prl  Qt5Networkd.lib  Qt5Networkd.prl  Qt5OpenGLExtensionsd.lib  Qt5OpenGLExtensionsd.prl  Qt5OpenGLd.lib  Qt5OpenGLd.prl  Qt5PlatformCompositorSupportd.lib  Qt5PlatformCompositorSupportd.prl  Qt5PrintSupportd.lib  Qt5PrintSupportd.prl  Qt5Sqld.lib  Qt5Sqld.prl  Qt5Testd.lib  Qt5Testd.prl  Qt5ThemeSupportd.lib  Qt5ThemeSupportd.prl  Qt5Widgetsd.lib  Qt5Widgetsd.prl  Qt5WindowsUIAutomationSupportd.lib  Qt5WindowsUIAutomationSupportd.prl  Qt5Xmld.lib  (+26 more)
LoginScreenConfig/vcpkg-export/installed/x64-windows/include/QtGui/: qtgui-config.h
LoginScreenConfig/vcpkg-export/installed/x64-windows/include/QtOpenGL/: qtopenglversion.h
LoginScreenConfig/vcpkg-export/installed/x64-windows/include/QtOpenGLExtensions/: qtopenglextensionsversion.h
LoginScreenConfig/vcpkg-export/installed/x64-windows/include/server/: pg_config.h
LoginScreenConfig/vcpkg-export/installed/x64-windows/lib/: Qt5AccessibilitySupport.lib  Qt5AccessibilitySupport.prl  Qt5Concurrent.lib  Qt5Concurrent.prl  Qt5Core.lib  Qt5Core.prl  Qt5DBus.lib  Qt5DBus.prl  Qt5DeviceDiscoverySupport.lib  Qt5DeviceDiscoverySupport.prl  Qt5EdidSupport.lib  Qt5EdidSupport.prl  Qt5EventDispatcherSupport.lib  Qt5EventDispatcherSupport.prl  Qt5FbSupport.lib  Qt5FbSupport.prl  Qt5FontDatabaseSupport.lib  Qt5FontDatabaseSupport.prl  Qt5Gui.prl  Qt5Network.lib  Qt5Network.prl  Qt5OpenGL.lib  Qt5OpenGL.prl  Qt5OpenGLExtensions.lib  Qt5OpenGLExtensions.prl  Qt5PlatformCompositorSupport.lib  Qt5PlatformCompositorSupport.prl  Qt5PrintSupport.lib  Qt5PrintSupport.prl  Qt5Sql.lib  Qt5Sql.prl  Qt5Test.lib  Qt5Test.prl  Qt5ThemeSupport.lib  Qt5ThemeSupport.prl  Qt5Widgets.lib  Qt5Widgets.prl  Qt5WindowsUIAutomationSupport.lib  Qt5WindowsUIAutomationSupport.prl  Qt5Xml.lib  (+20 more)
LoginScreenConfig/vcpkg-export/installed/x64-windows/lib/manual-link/: qtmain.lib  qtmain.prl
LoginScreenConfig/vcpkg-export/installed/x64-windows/lib/pkgconfig/: freetype2.pc  (+7 more)
LoginScreenConfig/vcpkg-export/installed/x86-windows/include/: pcre2.h  pg_config.h
LoginScreenConfig/vcpkg-export/installed/x86-windows/lib/: Qt5AccessibilitySupport.lib  Qt5AccessibilitySupport.prl  Qt5Concurrent.lib  Qt5Concurrent.prl  Qt5Core.lib  Qt5Core.prl  Qt5DBus.lib  Qt5DBus.prl  Qt5DeviceDiscoverySupport.lib  Qt5DeviceDiscoverySupport.prl  Qt5EdidSupport.lib  Qt5EdidSupport.prl  Qt5EventDispatcherSupport.lib  Qt5EventDispatcherSupport.prl  Qt5FbSupport.lib  Qt5FbSupport.prl  Qt5FontDatabaseSupport.lib  Qt5FontDatabaseSupport.prl  Qt5Gui.prl  Qt5Network.lib  Qt5Network.prl  Qt5OpenGL.lib  Qt5OpenGL.prl  Qt5OpenGLExtensions.lib  Qt5OpenGLExtensions.prl  Qt5PlatformCompositorSupport.lib  Qt5PlatformCompositorSupport.prl  Qt5PrintSupport.lib  Qt5PrintSupport.prl  Qt5Sql.lib  Qt5Sql.prl  Qt5Test.lib  Qt5Test.prl  Qt5ThemeSupport.lib  Qt5ThemeSupport.prl  Qt5Widgets.lib  Qt5Widgets.prl  Qt5WindowsUIAutomationSupport.lib  Qt5WindowsUIAutomationSupport.prl  Qt5Xml.lib  (+26 more)
LoginScreenLibrary/: CMakeLists.txt  CSampleCredential.cpp  CSampleCredential.h  CSampleProvider.cpp  CSampleProvider.h  ClassFactory.h  Dll.cpp  DllWrapper.cpp  DllWrapper.h  LoginScreenLibrary.def  RefCounter.h  guid.h
(+242 files in other folders)
